--- a/internal/tmpl/templates/directory_view.templ
+++ b/internal/tmpl/templates/directory_view.templ
@@ -1,24 +1,49 @@
 package templates
 
-import "r.tomng.dev/goserve/internal/files"
+import (
+	"r.tomng.dev/goserve/internal/files"
+	"path/filepath"
+)
 
-templ DirectoryView(dirPath string, entries []files.Entry) {
+templ DirectoryView(dirPath string, entries []files.DirEntry) {
 	<!DOCTYPE html>
 	<html>
 		<head lang="en">
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>Goserve Indexing</title>
+			<title>Indexing - { dirPath }</title>
 		</head>
 		<body>
 			<h1>Indexing - { dirPath }</h1>
+			<hr/>
 			<main>
-				<ul>
-					for _, entry := range entries {
-						<li><a href="/{ entry.Path }">{ entry.Name }</a></li>
-					}
-				</ul>
+				<table>
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Size</th>
+							<th>Permissions</th>
+						</tr>
+					</thead>
+					<tbody>
+						if dirPath != "/" {
+							<tr>
+								<td><a href={ templ.URL(filepath.Dir(dirPath)) }>../</a></td>
+								<td></td>
+								<td></td>
+							</tr>
+						}
+						for _, entry := range entries {
+							<tr>
+								<td><a href={ templ.URL(filepath.Join(dirPath, entry.Name())) }>{ entry.Name() }</a></td>
+								<td>{ entry.Size() }</td>
+								<td>{ entry.Permissions() }</td>
+							</tr>
+						}
+					</tbody>
+				</table>
 			</main>
+			<hr/>
 			<footer>
 				<i>Powered by <a href="https://r.tomng.dev/goserve">goserve</a></i>
 			</footer>
