--- a/internal/tmpl/templates/directory_view.templ
+++ b/internal/tmpl/templates/directory_view.templ
@@ -5,13 +5,26 @@ import (
 	"path/filepath"
 )
 
-templ DirectoryView(dirPath string, entries []files.DirEntry) {
+templ DirectoryView(dirPath string, entries []files.DirEntry, nonce string) {
 	<!DOCTYPE html>
 	<html>
 		<head lang="en">
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>Indexing - { dirPath }</title>
+			<style nonce={ nonce }>
+				td:nth-child(2), td:nth-child(3) {
+					text-align: end;
+				}
+
+				table td:nth-child(3) {
+					font-family: monospace;
+				}
+
+				th:not(:nth-child(1)), td:not(:nth-child(1)) {
+					padding-left: 0.5em;
+				}
+			</style>
 		</head>
 		<body>
 			<h1>Indexing - { dirPath }</h1>
