chore!: rename package to use github instead of custom domain

--- a/internal/tmpl/dirview/themes/basic/view.templ
+++ b/internal/tmpl/dirview/themes/basic/view.templ
@@ -3,7 +3,7 @@ package basic
 import (
 	"path/filepath"
 
-	"r.tomng.dev/goserve/internal/files"
+	"github.com/ducng99/goserve/internal/files"
 )
 
 templ View(dirPath string, entries []files.DirEntry) {
@@ -59,7 +59,7 @@ templ View(dirPath string, entries []files.DirEntry) {
 			</main>
 			<hr/>
 			<footer>
-				<i>Powered by <a href="https://r.tomng.dev/goserve">goserve</a></i>
+				<i>Powered by <a href="https://github.com/ducng99/goserve">goserve</a></i>
 			</footer>
 		</body>
 	</html>
